allprojects {

}
subprojects {
    apply plugin: "java"
    sourceCompatibility = "1.8"
    targetCompatibility = "1.8"
    group 'me.matoosh.undernet'
    version '0.3'

    repositories {
        mavenCentral()
    }

    dependencies {
        compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
        compile group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
        compile group: "org.cfg4j", name:"cfg4j-core", version: "4.4.1"
        compile group: 'commons-codec', name: 'commons-codec', version: '1.4'
    }
}